Fix header view components alignment while printing: use table

--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,8 @@ table thead th {
     font:inherit;
 }
 .page-head{
-    height:100px;
+    height:130px;
     width:100%;
-    /* background:yellow; */
-    display:flex;
     flex-direction: row;
     align-items:stretch;
     justify-content: space-evenly;
@@ -79,9 +77,9 @@ table thead th {
 }
 
 .ph-left{
-    width:30%;
     display: flex;
-    /* flex-grow:1; */
+    float: left;
+    height:130px;
 }
 
 .page-logo img{
@@ -109,15 +107,7 @@ table thead th {
     /* background:red; */
     border-top:1px solid lightgrey;
 }
-.page-head > div{
-    /* height:100%; */
-    /* width:33%;
-    /* border:1px solid black; */
-}
 .ph-mid{
-    flex-direction: column;
-    width:40%;
-}
-.ph-right{
-    width:30%
+    float: left;
+    margin-top: 20px;
 }
